# ais-dev2il-mlops-taxi-rides-v2

./: compare.py  outlier_detector_training.py  pyproject.toml  test_pickle.py
.dvc/: config
data/: .gitignore  2025-01-01.taxi-rides.parquet.dvc  2025-01-02.taxi-rides.parquet.dvc  2025-01-03.taxi-rides.parquet.dvc  2025-01-04.taxi-rides.parquet.dvc  2025-01-05.taxi-rides.parquet.dvc  2025-01-06.taxi-rides.parquet.dvc  2025-01-07.taxi-rides.parquet.dvc  2025-01-08.taxi-rides.parquet.dvc  2025-01-09.taxi-rides.parquet.dvc  2025-01-10.taxi-rides.parquet.dvc  2025-01-11.taxi-rides.parquet.dvc  2025-01-12.taxi-rides.parquet.dvc  2025-01-13.taxi-rides.parquet.dvc  2025-01-14.taxi-rides.parquet.dvc  2025-01-15.taxi-rides.parquet.dvc  2025-01-16.taxi-rides.parquet.dvc  2025-01-17.taxi-rides.parquet.dvc  2025-01-18.taxi-rides.parquet.dvc  2025-01-19.taxi-rides.parquet.dvc  2025-01-20.taxi-rides.parquet.dvc  2025-01-21.taxi-rides.parquet.dvc  2025-01-22.taxi-rides.parquet.dvc  2025-01-24.taxi-rides.parquet.dvc  2025-01-25.taxi-rides.parquet.dvc  2025-01-26.taxi-rides.parquet.dvc  2025-01-27.taxi-rides.parquet.dvc  2025-01-28.taxi-rides.parquet.dvc  2025-01-29.taxi-rides.parquet.dvc  2025-01-30.taxi-rides.parquet.dvc  2025-01-31.taxi-rides.parquet.dvc  taxi-rides-training-data.parquet.dvc
example-data/data/: 2025-01-01.taxi-rides.parquet  2025-01-02.taxi-rides.parquet  2025-01-03.taxi-rides.parquet  2025-01-04.taxi-rides.parquet  2025-01-05.taxi-rides.parquet  2025-01-06.taxi-rides.parquet  2025-01-07.taxi-rides.parquet  2025-01-08.taxi-rides.parquet  (+22 more)
