[project]
name = "ais-dev2il-mlops-taxi-rides-v2"
version = "1.0.0"
requires-python = ">=3.13.0"
dependencies = [
    "pandas==2.2.3",
    "pyarrow==19.0.1",
    "fastparquet==2024.11.0",
    "scikit-learn>=1.8.0",
    "mlflow>=3.10.1",
    "fastapi[standard]>=0.135.3",
    "pandas-stubs==3.0.0.260204",
]

[dependency-groups]
dev = [
    "dvc[s3]>=3.67.1",
]
